alignments of footer and center made correctly and routes are created for dynamic routing

--- a/healthy-lifestyle/src/App.css
+++ b/healthy-lifestyle/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #e4e5e9;
+  background-color: #fefeff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
